tests/ui/transmutability/issue-101739-1.stderr
error[E0412]: cannot find type `Dst` in this scope
  --> $DIR/issue-101739-1.rs:8:9
   |
LL |         Dst: BikeshedIntrinsicFrom<Src, Context, ASSUME_ALIGNMENT>,
   |         ^^^ not found in this scope

error: the constant `ASSUME_ALIGNMENT` is not of type `Assume`
  --> $DIR/issue-101739-1.rs:8:14
   |
LL |         Dst: BikeshedIntrinsicFrom<Src, Context, ASSUME_ALIGNMENT>,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Assume`, found `bool`
   |
note: required by a bound in `BikeshedIntrinsicFrom`
  --> $SRC_DIR/core/src/mem/transmutability.rs:LL:COL

error[E0308]: mismatched types
  --> $DIR/issue-101739-1.rs:8:50
   |
LL |         Dst: BikeshedIntrinsicFrom<Src, Context, ASSUME_ALIGNMENT>,
   |                                                  ^^^^^^^^^^^^^^^^ expected `Assume`, found `bool`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0412.
For more information about an error, try `rustc --explain E0308`.
